--- a/input.scss
+++ b/input.scss
@@ -1,5 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900);
 
+.container {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 h1 {
   font-family: Roboto;
   font-size: 3.5rem;
@@ -38,29 +43,28 @@ body {
 
 .topBar {
   background-color: #005c13;
-  .smallInformation {
-    ul {
-      margin-bottom: 0;
-      margin-top: 10px;
-      padding: 0px;
-      li {
-        margin-right: 20px;
+  padding-top: .6rem;
+  ul {
+    li {
+      margin-right: 20px;
+      .nav-link {
+        padding: 0;
+      }
+      p {
+        padding-right: 20px;
+        margin-left: 10px;
+        text-align: right;
+        display: inline-block;
+        color: white;
+        border-right: 1px solid rgba(255, 255, 255, 0.5);
+      }
+      @media (max-width: 480px) {
         p {
-          padding-right: 20px;
-          margin-left: 10px;
-          text-align: right;
-          display: inline-block;
-          color: white;
-          border-right: 1px solid rgba(255, 255, 255, 0.5);
+          display: none;
         }
-        @media (max-width: 480px) {
-          p {
-            display: none;
-          }
-        }
-        .last {
-          border-right: none;
-        }
+      }
+      .last {
+        border-right: none;
       }
     }
   }
@@ -428,9 +432,10 @@ body {
 
 .panelServies {
   text-align: center;
+  padding-bottom: 5rem;
   .title {
     width: 100%;
-    padding: 50px;
+    padding: 5rem;
   }
   .serviceContent {
     .content {
@@ -454,56 +459,44 @@ body {
     }
   }
   .expertiseContent {
+    overflow-wrap: break-word;
     width: 100%;
-    .content {
-      margin-bottom: 40px;
-      width: 330px;
-      height: 185px;
+    .col {
+      position: relative;
+      padding-bottom: 3rem;
       h3 {
-        width: 242px;
-        height: 30px;
         font-family: Roboto;
         font-size: 1.3rem;
         font-weight: bold;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: 1;
         letter-spacing: normal;
         text-align: center;
-        color: #ffffff;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
       }
-      text-align: center;
-      position: relative;
     }
   }
 }
 
-.contactForm {
+.contactPanel {
   padding: 3rem 0;
-  .form {
+  height: auto;
+  .contactForm {
     box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
-    .inputContact {
-      padding-left: 3rem;
+  }
+  .imageContact,
+  .workWithUs {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .workWithUs {
+    .jumbotron {
+      padding-bottom: 0 !important;
       h1 {
-        font-family: Roboto;
         font-size: 3.1rem;
-        font-weight: 300;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: 1;
-        letter-spacing: normal;
-        color: #444444;
       }
       .form-group {
         font-family: Roboto;
         border-radius: 3px;
-        .form-control {
-          height: calc(2.25rem + 15px);
-        }
+        padding: 0;
         input,
         textarea {
           font-size: 1rem;
@@ -513,25 +506,22 @@ body {
         }
       }
     }
-  }
-  @media (max-width: 768px) {
-    .form {
-      padding: 2rem 2rem;
-      .inputContact {
-        padding-top: 1.5rem;
-        padding-left: 0;
+    @media (max-width: 768px) {
+      .jumbotron {
+        padding: 2rem 2rem;
+        .inputContact {
+          padding-top: 1.5rem;
+          padding-left: 0;
 
+        }
       }
     }
-  }
-  @media (max-width: 994px) {
-    .form {
-      .inputContact {
-        h1 {
-          font-size: 2rem;
-        }
-        .form-group .form-control {
-          height: calc(2.25rem - 5px);
+    @media (max-width: 994px) {
+      .jumbotron {
+        .inputContact {
+          h1 {
+            font-size: 2rem;
+          }
         }
       }
     }
@@ -540,28 +530,18 @@ body {
 
 .panelContent {
   position: relative;
-  .panelGradient {
-    width: 100%;
-  }
+  display: block;
   .content {
     position: absolute;
+    visibility: visible;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 2;
-    h1 {
-      color: #ffffff;
-    }
     p {
-      text-overflow: ellipsis;
       font-size: 1rem;
       font-weight: 300;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 1.55;
-      letter-spacing: normal;
-      color: #ffffff;
     }
     a:hover {
       cursor: pointer;
@@ -584,9 +564,32 @@ body {
       width: 90%;
     }
   }
+  @media (max-width: 480px) {
+    .content {
+      display: none;
+    }
+  }
+}
+
+.contentMobile {
+  display: none;
+  text-align: center;
+  @media (max-width: 479px) {
+    display: block;
+    padding: 2rem 2rem;
+  }
+  .jumbotron{
+    h1 {
+      font-size: 1.3rem;
+    }
+    font-weight: 500;
+    font-size: 0.8rem;
+  }
+
 }
 
 .panelContent::after {
+  width: 105%;
   content: '';
   position: absolute;
   top: 0;
@@ -597,16 +600,14 @@ body {
 }
 
 .panelFounder {
-  padding-top: 50px;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   .image {
     text-align: center;
   }
-}
-
-@media (max-width: 768px) {
-  .panelFounder {
-    padding-top: 0;
-    padding-bottom: 0;
+  @media (max-width: 767px) {
+    text-align: center;
+    padding-top: 0rem;
     .image {
       padding: 0rem 1rem 1rem 1rem;
     }
@@ -614,8 +615,7 @@ body {
       padding-bottom: 0;
     }
     .aboutFounder {
-      text-align: center;
-      padding: 0rem 2rem;
+      padding: 2rem 2rem;
     }
   }
 }
@@ -761,78 +761,4 @@ ul {
     display: inline;
     list-style: none;
   }
-}
-
-.col,
-.col-1,
-.col-10,
-.col-11,
-.col-12,
-.col-2,
-.col-3,
-.col-4,
-.col-5,
-.col-6,
-.col-7,
-.col-8,
-.col-9,
-.col-auto,
-.col-lg,
-.col-lg-1,
-.col-lg-10,
-.col-lg-11,
-.col-lg-12,
-.col-lg-2,
-.col-lg-3,
-.col-lg-4,
-.col-lg-5,
-.col-lg-6,
-.col-lg-7,
-.col-lg-8,
-.col-lg-9,
-.col-lg-auto,
-.col-md,
-.col-md-1,
-.col-md-10,
-.col-md-11,
-.col-md-12,
-.col-md-2,
-.col-md-3,
-.col-md-4,
-.col-md-5,
-.col-md-6,
-.col-md-7,
-.col-md-8,
-.col-md-9,
-.col-md-auto,
-.col-sm,
-.col-sm-1,
-.col-sm-10,
-.col-sm-11,
-.col-sm-12,
-.col-sm-2,
-.col-sm-3,
-.col-sm-4,
-.col-sm-5,
-.col-sm-6,
-.col-sm-7,
-.col-sm-8,
-.col-sm-9,
-.col-sm-auto,
-.col-xl,
-.col-xl-1,
-.col-xl-10,
-.col-xl-11,
-.col-xl-12,
-.col-xl-2,
-.col-xl-3,
-.col-xl-4,
-.col-xl-5,
-.col-xl-6,
-.col-xl-7,
-.col-xl-8,
-.col-xl-9,
-.col-xl-auto {
-  padding-right: 0;
-  padding-left: 0;
 }
