--- a/css/style.css
+++ b/css/style.css
@@ -120,12 +120,12 @@ body {
   content: "EN";
   padding-left: 30px;
   color: #ffffff;
-  content: url("./image/en.png");
+  content: url("../image/en.png");
 }
 .topBar .multiLanguage .onoffswitch4-inner:after {
   content: "VN";
   padding-right: 30px;
-  content: url("./image/vn.png");
+  content: url("../image/vn.png");
   color: #ffffff;
   text-align: right;
 }
@@ -337,7 +337,7 @@ body {
 }
 
 .panelExpertise {
-  background-image: url("./image/backgroundProduct.jpg");
+  background-image: url("../image/backgroundProduct.jpg");
 }
 .panelExpertise .header {
   width: 100%;
