--- a/css/about.css
+++ b/css/about.css
@@ -1,10 +1,36 @@
+.contentAboutUs .aboutUs h1 {
+  font-size: 2.5rem;
+}
 .contentAboutUs .aboutUs .description {
   right: 0;
   left: 0;
   margin-right: auto;
   margin-left: auto;
-  width: 50%;
-  top: 5em;
+  width: 60%;
+  padding-top: 2rem;
+}
+.contentAboutUs .aboutUs .description p {
+  font-size: 1rem;
+  line-height: 1.75;
+  letter-spacing: normal;
+  text-align: center;
+  color: #222222;
+  font-family: Roboto;
+}
+@media (max-width: 767px) {
+  .contentAboutUs .aboutUs .description {
+    width: 85%;
+  }
+}
+.contentAboutUs .aboutUs .contentDetails {
+  padding: 3rem 0;
+}
+.contentAboutUs .aboutUs .contentDetails p {
+  font-family: Roboto;
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-align: center;
+  color: #000000;
 }
 
 /*# sourceMappingURL=about.css.map */
