--- a/css/about.scss
+++ b/css/about.scss
@@ -1,12 +1,40 @@
 .contentAboutUs {
   .aboutUs {
+    h1 {
+      font-size: 2.5rem;
+    }
     .description {
       right: 0;
       left: 0;
       margin-right: auto;
       margin-left: auto;
-      width: 50%;
-      top: 5em;
+      width: 60%;
+      padding-top: 2rem;
+      p {
+        font-size: 1rem;
+        line-height: 1.75;
+        letter-spacing: normal;
+        text-align: center;
+        color: #222222;
+        font-family: Roboto;
+      }
+      @media (max-width: 767px) {
+        width: 85%;
+      }
+    }
+    .contentDetails {
+      padding: 3rem 0;
+      p {
+        font-family: Roboto;
+        font-size: 1.5rem;
+        font-weight: 500;
+        text-align: center;
+        color: #000000;
+      }
+      .col-12 {
+        @media (max-width: 767px) {
+        }
+      }
     }
   }
 }
