--- a/css/outProduct.css
+++ b/css/outProduct.css
@@ -1,3 +1,98 @@
+.headerProduct {
+  color: #444444;
+  font-weight: 400;
+}
 
+.carousel-wrap {
+  width: 100%;
+  margin: auto;
+  position: relative;
+}
+
+.owl-carousel .owl-nav {
+  overflow: hidden;
+  height: 0px;
+}
+
+.owl-stage-outer {
+  padding-top: 2rem;
+}
+@media (max-width: 991px) {
+  .owl-stage-outer {
+    padding-top: 46px;
+  }
+}
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+  background: #2caae1;
+}
+
+.owl-carousel .item {
+  text-align: center;
+}
+
+.owl-carousel .nav-btn {
+  height: 47px;
+  position: absolute;
+  width: 26px;
+  cursor: pointer;
+  top: 100px !important;
+}
+
+.owl-carousel .owl-prev.disabled,
+.owl-carousel .owl-next.disabled {
+  pointer-events: none;
+  opacity: 0.2;
+}
+
+.owl-carousel .prev-slide {
+  background: url("../image/nav-icon.png") no-repeat scroll 0 0;
+  left: -66px;
+}
+
+.owl-carousel .next-slide {
+  background: url("../image/nav-icon.png") no-repeat scroll -24px 0px;
+  right: -66px;
+}
+
+.owl-carousel .prev-slide:hover {
+  background-position: 0px -53px;
+}
+
+.owl-carousel .next-slide:hover {
+  background-position: -24px -53px;
+}
+
+.owl-dots {
+  display: none;
+}
+
+span.img-text {
+  text-decoration: none;
+  text-align: left;
+  font-weight: 500;
+  font-size: 0.8rem;
+  outline: none;
+  transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  cursor: pointer;
+  width: 100%;
+  display: block;
+  text-transform: capitalize;
+  padding-top: 1rem;
+}
+
+span.img-text:hover {
+  color: #2caae1;
+}
+
+@media (max-width: 767px) {
+  .nav-btn {
+    display: none;
+  }
+}
 
 /*# sourceMappingURL=outProduct.css.map */
